Algunos retoques finales

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -3,9 +3,9 @@
 {% block title %}Acerca de mí{% endblock %}
 
 {% block content %}
-<h1>Acerca de Fernando</h1>
+<h1>Acerca del Blog</h1>
 <p>Hola, soy Fernando y este es mi blog de prueba para el proyecto final de Coderhouse.</p>
-<p>Aquí podrás leer mis posts, ver mi perfil y contactarme a través de mensajes.</p>
+<p>Los usuarios podrán ver, editar y borrar sus post, enviarse mensajes y editar sus perfiles.</p>
 {% endblock %}
 
 
