--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,5 +4,5 @@
 
 {% block content %}
 <h1>Bienvenido a Mi Blog</h1>
-<p>Este es el inicio de la página. Desde aquí los usuarios podrán navegar a About, Posts, Perfil y demás secciones.</p>
+<p>Desde aquí los usuarios podrán navegar a Posts, Acerca de mí, loguearse o registrarse. Al registrarse también podrán enviar mensajes a otros usuarios.</p>
 {% endblock %}
